--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   "peerDependencies": {
     "jquery": "*"
   },
+  "devDependencies": {
+    "chai": "1.9.1",
+    "sinon": "1.10.2",
+    "jsdom": "0.11.0",
+    "coffee-script": "1.7.1"
+  },
   "bugs": {
     "url": "https://github.com/rstacruz/jquery.transit/issues"
   },
